<resources>
    <string name="app_name">GANGA</string>
    <string name="title_activity_nav">NavAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_river">Rivers</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Filter</string>
    <string name="menu_tools">Add Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Language</string>
    <string name="menu_help">Help</string>
    <string name="home">"GHaT-Ganga Heritage and Tributaries" designed to connect the people with their rivers.\nGhats and crematories are considered one of the auspicious locations of the rituals. In Hindu tradition , cremation is one of the rites of passage. \nThis app will provide list of ghats, crematories and riverfronts near you and also provides details about them.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
