<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ganga.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ganga.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_rivers"
        android:name="com.example.ganga.RiverFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_river" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.example.ganga.FilterFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.ganga.AddFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.ganga.ShareFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_lang"
        android:name="com.example.ganga.LangFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_lang" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.ganga.HelpFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_help" />
</navigation>